--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -93,7 +93,7 @@ body {
     font-family: 'Noto Serif', serif;
     font-size: 2.0rem;
     line-height: 1.6em;
-    color: #3A4145;
+    color: #000;
 }
 
 ::-moz-selection {
