--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -956,37 +956,37 @@ nav {
   width: 90%; 
 }
 
-nav ul {
-  margin: 0;
-  padding: 0;
-}
+  nav ul {
+    margin: 0;
+    padding: 0;
+  }
 
-nav ul li {
-  display: inline-block;
-  list-style-type: none;
-  
-  -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
-    -ms-transition: all 0.2s;
-    -o-transition: all 0.2s;
-    transition: all 0.2s; 
-}
+    nav ul li {
+      display: inline-block;
+      list-style-type: none;
       
-nav > ul > li > a > .caret {
-    border-top: 4px solid #aaa;
-    border-right: 4px solid transparent;
-    border-left: 4px solid transparent;
-    content: "";
-    display: inline-block;
-    height: 0;
-    width: 0;
-    vertical-align: middle;
-
-    -webkit-transition: color 0.1s linear;
-      -moz-transition: color 0.1s linear;
-    -o-transition: color 0.1s linear;
-      transition: color 0.1s linear; 
-}
+      -webkit-transition: all 0.2s;
+        -moz-transition: all 0.2s;
+        -ms-transition: all 0.2s;
+        -o-transition: all 0.2s;
+        transition: all 0.2s; 
+    }
+      
+      nav > ul > li > a > .caret {
+        border-top: 4px solid #aaa;
+        border-right: 4px solid transparent;
+        border-left: 4px solid transparent;
+        content: "";
+        display: inline-block;
+        height: 0;
+        width: 0;
+        vertical-align: middle;
+  
+        -webkit-transition: color 0.1s linear;
+          -moz-transition: color 0.1s linear;
+        -o-transition: color 0.1s linear;
+          transition: color 0.1s linear; 
+      }
 
       nav > ul > li > a {
         color: #aaa;
@@ -1018,7 +1018,8 @@ nav > ul > li > a > .caret {
         opacity: 0;
         position: absolute;
         width: 165px;
-        visibility: hidden;
+    visibility: hidden;
+    z-index: 100;
   
         -webkit-transiton: opacity 0.2s;
         -moz-transition: opacity 0.2s;
@@ -1047,6 +1048,7 @@ nav > ul > li > a > .caret {
               nav > ul > li > div ul > li:hover > a {
                 background-color: rgba( 255, 255, 255, 0.1);
               }
+  
 
 /* ==========================================================================
    End of file. Media queries should be the last thing here. Do not add stuff
