--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -380,6 +380,8 @@ margin on the iframe, cause it breaks stuff. */
     text-decoration: none;
 }
 
+/*0086B3*/
+
 /* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
 .blog-logo img {
     display: block;
