--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
   <meta name="author" content="{{ site.name }}" />
   <meta name="description" content="{{ site.description }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+  <meta name="google-site-verification" content="2BMAdY9YwHNMc0GJZ86_YoleLY2t8uIfyrEDI_IUNWY" />
+  
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
